--- a/UserVersion/src/resources/FXML/BaseUI.fxml
+++ b/UserVersion/src/resources/FXML/BaseUI.fxml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resources.controller.BaseUIController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resources.controller.BaseUIController">
    <VBox fx:id="menuPane" prefHeight="600.0" prefWidth="200.0">
       <Button fx:id="profileButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Username">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="directoryButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Каталог">
+      <Button fx:id="directoryButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Каталог" >
          <VBox.margin>
             <Insets top="2.0" />
          </VBox.margin>
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Button fx:id="orderButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Заказы">
          <VBox.margin>
