--- a/UserVersion/src/resources/FXML/BaseUI.fxml
+++ b/UserVersion/src/resources/FXML/BaseUI.fxml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resources.controller.BaseUIController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resources.controller.BaseUIController">
    <VBox fx:id="menuPane" prefHeight="600.0" prefWidth="200.0">
-      <Button fx:id="profileButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Username">
+      <JFXButton fx:id="profileButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Username">
          <font>
             <Font size="18.0" />
          </font>
-      </Button>
-      <Button fx:id="directoryButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Каталог">
+      </JFXButton>
+      <JFXButton fx:id="directoryButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Каталог">
          <VBox.margin>
             <Insets top="2.0" />
          </VBox.margin>
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font>
-      </Button>
-      <Button fx:id="orderButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="Заказы">
+      </JFXButton>
+      <JFXButton fx:id="orderButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Заказы">
          <VBox.margin>
             <Insets top="2.0" />
          </VBox.margin>
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font>
-      </Button>
+      </JFXButton>
    </VBox>
    <ScrollPane fitToWidth="true" layoutX="200.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
       <FlowPane fx:id="displayPane" layoutX="200.0" prefHeight="600.0" prefWidth="800.0">
