--- a/UserVersion/src/resources/FXML/BaseUI.fxml
+++ b/UserVersion/src/resources/FXML/BaseUI.fxml
@@ -31,6 +31,14 @@
             <Font name="Comic Sans MS" size="14.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="communicationButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Связь">
+         <VBox.margin>
+            <Insets top="2.0" />
+         </VBox.margin>
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </JFXButton>
    </VBox>
    <ScrollPane fitToWidth="true" layoutX="200.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
       <FlowPane fx:id="displayPane" layoutX="200.0" prefHeight="600.0" prefWidth="800.0">
