--- a/UserVersion/src/resources/FXML/BaseUI.fxml
+++ b/UserVersion/src/resources/FXML/BaseUI.fxml
@@ -15,6 +15,14 @@
             <Font size="18.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="communicationButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Связь">
+         <VBox.margin>
+            <Insets top="2.0" />
+         </VBox.margin>
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </JFXButton>
       <JFXButton fx:id="directoryButton" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Каталог">
          <VBox.margin>
             <Insets top="2.0" />
@@ -31,7 +39,15 @@
             <Font name="Comic Sans MS" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="communicationButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Связь">
+      <JFXButton fx:id="allOrdersButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Измение состояния заказа">
+         <VBox.margin>
+            <Insets top="2.0" />
+         </VBox.margin>
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="allUserButton" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" style="-jfx-button-type: RAISED; -fx-background-color: #4da6ff; -fx-text-fill: white;" text="Пользователи">
          <VBox.margin>
             <Insets top="2.0" />
          </VBox.margin>
